test/cli/deprecated-versions/cleanuppolicy.yaml
apiVersion: kyverno.io/v2beta1
kind: CleanupPolicy
metadata:
  name: deprecated-cleanuppolicy
  namespace: test
spec:
  schedule: "*/1 * * * *"
  match:
    any:
    - resources:
        kinds:
        - Pod
        name: cleanup-pod-1
